[gd_scene load_steps=2 format=3 uid="uid://d0ofc714v1gjt"]

[ext_resource type="Script" path="res://scripts/menus/main_menu.gd" id="1_nbqq7"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_nbqq7")

[node name="Buttons" type="Node2D" parent="."]

[node name="Level1" type="Button" parent="Buttons"]
offset_left = 64.0
offset_top = 32.0
offset_right = 320.0
offset_bottom = 96.0
text = "Level1"
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Buttons/Level1"]
layout_mode = 0
offset_left = 280.0
offset_right = 536.0
offset_bottom = 64.0

[node name="Level2" type="Button" parent="Buttons"]
offset_left = 64.0
offset_top = 128.0
offset_right = 320.0
offset_bottom = 192.0
text = "Level2"
metadata/_edit_use_anchors_ = true

[node name="Level3" type="Button" parent="Buttons"]
offset_left = 64.0
offset_top = 224.0
offset_right = 320.0
offset_bottom = 288.0
text = "Level3
"
metadata/_edit_use_anchors_ = true

[node name="Quit" type="Button" parent="Buttons"]
offset_left = 64.0
offset_top = 320.0
offset_right = 320.0
offset_bottom = 384.0
text = "Quit"
metadata/_edit_use_anchors_ = true

[node name="Players" type="Node2D" parent="."]

[connection signal="pressed" from="Buttons/Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="Buttons/Level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="Buttons/Level3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="Buttons/Quit" to="." method="_on_quit_pressed"]
